Updated Disclaimer and some data

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ yMMm-`           -    -           `-mMMs
         <div class="btn purple" type="button" id="purple"></div>
       </div>
     </div>
-    <div class="spacebar">
-      <div class="virtual-key" id="virtual-spacebar" type="button">
+    <div class="playbutton">
+      <div class="virtual-key" id="virtual-playbutton" type="button">
         <span>WANT TO PLAY !!!</span>
       </div>
     </div>
@@ -113,6 +113,7 @@ yMMm-`           -    -           `-mMMs
         <a href="https://www.instagram.com/snehasish_mandal_/"target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256"><path fill="currentColor" d="M128 80a48 48 0 1 0 48 48a48.05 48.05 0 0 0-48-48Zm0 72a24 24 0 1 1 24-24a24 24 0 0 1-24 24Zm48-132H80a60.07 60.07 0 0 0-60 60v96a60.07 60.07 0 0 0 60 60h96a60.07 60.07 0 0 0 60-60V80a60.07 60.07 0 0 0-60-60Zm36 156a36 36 0 0 1-36 36H80a36 36 0 0 1-36-36V80a36 36 0 0 1 36-36h96a36 36 0 0 1 36 36ZM196 76a16 16 0 1 1-16-16a16 16 0 0 1 16 16Z"/></svg></a>
       </div>
     </div>
+    <div class="disclaimer"><p><b>DISCLAIMER:</b>This Background Voice is used just for Entartainment Purpose.Its not meant to harm someone's Ego...</p></div>
 
     <script src="app.js"></script>
     <audio id="gameOverSound" volume="1000" src="chala-ja-bsdk.mp3"></audio>
