--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ yMMm-`           -    -           `-mMMs
     <div class="disclaimer"><p><b>DISCLAIMER:</b>This Background Voice is used just for Entartainment Purpose.Its not meant to harm someone's Ego...</p></div>
 
     <script src="app.js"></script>
-    <audio id="gameOverSound" volume="1000" src="chala-ja-bsdk.mp3"></audio>
+    <audio id="gameOverSound" volume="1000" src="mixkit-wrong-answer-fail-notification-946.wav"></audio>
 
   </body>
 </html>
